force-app/main/default/objects/Contact/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <externalId>true</externalId>
    <label>AccountId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>