force-app/main/default/objects/Contact/fields/Bid_License__c.field-meta.xml
<CustomField>
    <fullName>Bid_License__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bid License</label>
    <type>Checkbox</type>
</CustomField>