force-app/main/default/objects/Contact/fields/Collection_Frequency1__c.field-meta.xml
<CustomField>
    <fullName>Collection_Frequency1__c</fullName>
    <label>Collection Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>