force-app/main/default/objects/Contact/fields/contact_case_safe_if__c.field-meta.xml
<CustomField>
    <fullName>contact_case_safe_if__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>contact case safe if</label>
    <type>Text</type>
</CustomField>