force-app/main/default/objects/Contact/fields/CP_ID__c.field-meta.xml
<CustomField>
    <fullName>CP_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>CP ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>