force-app/main/default/objects/Contact/fields/Current_Supplier1__c.field-meta.xml
<CustomField>
    <fullName>Current_Supplier1__c</fullName>
    <label>Current Supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>