force-app/main/default/objects/Contact/fields/Device_Type__c.field-meta.xml
<CustomField>
    <fullName>Device_Type__c</fullName>
    <label>Device Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>iOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>