force-app/main/default/objects/Contact/fields/Document_Access_Link__c.field-meta.xml
<CustomField>
    <fullName>Document_Access_Link__c</fullName>
    <formula>$Setup.CP_Doc_URL__c.Value__c &amp; FMCP_Token__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Document Access Link</label>
    <type>Text</type>
</CustomField>