force-app/main/default/objects/Contact/fields/External_Trigger__c.field-meta.xml
<CustomField>
    <fullName>External_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Zapier &gt; Formstack</description>
    <label>External Trigger</label>
    <type>Checkbox</type>
</CustomField>