force-app/main/default/objects/Contact/fields/External_Trigger_Value__c.field-meta.xml
<CustomField>
    <fullName>External_Trigger_Value__c</fullName>
    <label>External Trigger Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GSC</fullName>
            </value>
            <value>
                <fullName>Recycle My Salon</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>