force-app/main/default/objects/Contact/fields/FMCP_Token__c.field-meta.xml
<CustomField>
    <fullName>FMCP_Token__c</fullName>
    <label>FMCP Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>