force-app/main/default/objects/Contact/fields/Form_Titan_Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>Form_Titan_Secret_Key__c</fullName>
    <label>Form Titan Secret Key</label>
    <length>18</length>
    <type>Text</type>
</CustomField>