force-app/main/default/objects/Contact/fields/gaconnector_First_Click_Source__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_First_Click_Source__c</fullName>
    <label>First Click Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>