force-app/main/default/objects/Contact/fields/gaconnector_Google_Analytics_Link__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_Google_Analytics_Link__c</fullName>
    <formula>HYPERLINK( (&quot;https://analytics.google.com/analytics/web/#report/visitors-user-activity/a72840801w110617423p115383936/%3F_r.userId%3D&quot; &amp; gaconnector_Google_Analytics_Client_ID__c &amp; &quot;%26_r.userListReportStates%3D%26_r.userListReportId%3Dvisitors-legacy-user-id/&quot;), &quot;Open in Google Analytics&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Analytics Link</label>
    <type>Text</type>
</CustomField>