force-app/main/default/objects/Contact/fields/gaconnector_Last_Click_Referrer__c.field-meta.xml
<CustomField>
    <fullName>gaconnector_Last_Click_Referrer__c</fullName>
    <label>Last Click Referrer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>