force-app/main/default/objects/Contact/fields/HubSpotId__c.field-meta.xml
<CustomField>
    <fullName>HubSpotId__c</fullName>
    <externalId>true</externalId>
    <label>HubSpot Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>