force-app/main/default/objects/Contact/fields/Interested_In_Services__c.field-meta.xml
<CustomField>
    <fullName>Interested_In_Services__c</fullName>
    <label>Interested In Services</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>