force-app/main/default/objects/Contact/fields/IsMainContact__c.field-meta.xml
<CustomField>
    <fullName>IsMainContact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Main Contact?</label>
    <type>Checkbox</type>
</CustomField>