force-app/main/default/objects/Contact/fields/Last_Portal_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Portal_Login_Date__c</fullName>
    <description>FMCP Last Login Date</description>
    <label>Last Portal Login Date</label>
    <type>Date</type>
</CustomField>