force-app/main/default/objects/Contact/fields/LastEmailReceived__c.field-meta.xml
<CustomField>
    <fullName>LastEmailReceived__c</fullName>
    <label>Last Email Received</label>
    <type>DateTime</type>
</CustomField>