force-app/main/default/objects/Contact/fields/MarketingCat__c.field-meta.xml
<CustomField>
    <fullName>MarketingCat__c</fullName>
    <formula>IF
(OR(ISPICKVAL(Account.MarketingCat__c, &quot;New Customer&quot;)), &quot;New Customer&quot;,
IF(OR(ISPICKVAL(Account.MarketingCat__c, &quot;Prospect&quot;)), &quot;Prospect&quot;,
IF(OR(ISPICKVAL(Account.MarketingCat__c, &quot;Customer&quot;)), &quot;Customer&quot;,
IF(OR(ISPICKVAL(Account.MarketingCat__c, &quot;Indirect&quot;)), &quot;Indirect&quot;, &quot;None&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MarketingCat</label>
    <type>Text</type>
</CustomField>