force-app/main/default/objects/Contact/fields/Number_of_Bins_Sacks_in_a_Week__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bins_Sacks_in_a_Week__c</fullName>
    <label>Number of Bins / Sacks in a Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>