force-app/main/default/objects/Contact/fields/Other_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Contact_Name__c</fullName>
    <label>Other Contact Name</label>
    <type>TextArea</type>
</CustomField>