force-app/main/default/objects/Contact/fields/Pardot_Prospect_Journey_Type__c.field-meta.xml
<CustomField>
    <fullName>Pardot_Prospect_Journey_Type__c</fullName>
    <label>Pardot Journey Prospect Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold Lead</fullName>
            </value>
            <value>
                <fullName>Free Trial Used</fullName>
            </value>
            <value>
                <fullName>Free Trial Not Used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>