force-app/main/default/objects/Contact/fields/ParentAccountId__c.field-meta.xml
<CustomField>
    <fullName>ParentAccountId__c</fullName>
    <formula>CASE(Account.RecordType.DeveloperName, &apos;Partner&apos;, CASESAFEID(AccountId), &apos;Account&apos;, CASESAFEID(AccountId), CASESAFEID(Account.ParentId))</formula>
    <label>Parent Account Id</label>
    <type>Text</type>
</CustomField>