force-app/main/default/objects/Contact/fields/PortalLoginEmailSent__c.field-meta.xml
<CustomField>
    <fullName>PortalLoginEmailSent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Login Email Sent</label>
    <type>Checkbox</type>
</CustomField>