force-app/main/default/objects/Contact/fields/PortalLoginEmailSentDate__c.field-meta.xml
<CustomField>
    <fullName>PortalLoginEmailSentDate__c</fullName>
    <label>Portal Login Email Sent Date</label>
    <type>Date</type>
</CustomField>