force-app/main/default/objects/Contact/fields/Preferences__c.field-meta.xml
<CustomField>
    <fullName>Preferences__c</fullName>
    <label>Preferences</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>Finance Only</fullName>
            </value>
            <value>
                <fullName>No Emails</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>