force-app/main/default/objects/Contact/fields/previous_email__c.field-meta.xml
<CustomField>
    <fullName>previous_email__c</fullName>
    <label>previous_email</label>
    <type>Email</type>
</CustomField>