force-app/main/default/objects/Contact/fields/ptoken__c.field-meta.xml
<CustomField>
    <fullName>ptoken__c</fullName>
    <label>ptoken</label>
    <length>10</length>
    <type>Text</type>
</CustomField>