force-app/main/default/objects/Contact/fields/Receive_Global_Report__c.field-meta.xml
<CustomField>
    <fullName>Receive_Global_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Receive Global Report</label>
    <type>Checkbox</type>
</CustomField>