force-app/main/default/objects/Contact/fields/Supply_Chain_App__c.field-meta.xml
<CustomField>
    <fullName>Supply_Chain_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supply Chain App</label>
    <type>Checkbox</type>
</CustomField>