force-app/main/default/objects/Contact/fields/supply_chain_password__c.field-meta.xml
<CustomField>
    <fullName>supply_chain_password__c</fullName>
    <label>Supply Chain Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>