force-app/main/default/objects/Contact/fields/suppy_ptoken__c.field-meta.xml
<CustomField>
    <fullName>suppy_ptoken__c</fullName>
    <label>Supply Password Token</label>
    <length>10</length>
    <type>Text</type>
</CustomField>