force-app/main/default/objects/Contact/fields/Unsubscribed__c.field-meta.xml
<CustomField>
    <fullName>Unsubscribed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unsubscribed</label>
    <type>Checkbox</type>
</CustomField>