force-app/main/default/objects/Contact/validationRules/Prevent_update_to_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_update_to_Email</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name &lt;&gt; &apos;System Administrator&apos;, NOT(ISNEW()), ISCHANGED( Email ))</errorConditionFormula>
    <errorMessage>Only the system administrator can update the Email, after the record is inserted.</errorMessage>
</ValidationRule>