force-app/main/default/objects/Contact/listViews/Hannah_test.listView-meta.xml
<ListView>
    <fullName>Hannah_test</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>equals</operation>
        <value>hannah.goldsmith@thefirstmile.co.uk</value>
    </filters>
    <label>Hannah test</label>
</ListView>