force-app/main/default/objects/Contact/listViews/signed_up_this_week.listView-meta.xml
<ListView>
    <fullName>signed_up_this_week</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>MarketingCat__c</columns>
    <filterScope>Everything</filterScope>
    <label>signed up last week</label>
</ListView>